--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </style>
 </head>
 <body>
-    <div id="container">
+    <main id="container">
         <section>
-            <div id="left"> 
+            <section id="left"> 
                 <header>
                     g
                 </header>
@@ -58,14 +58,15 @@
                 <article>
                     g 
                 </article>
-            </div>
-            <div id="right">
+            </section>
+            <section id="right">
                 <aside>g</aside>
-            </div>
+            </section>
         </section>
         <footer>g</footer>
-    </div>
+    </main>
 
     
 </body>
+
 </html>
