--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             height: 675px;
             width: 25%;
         }
-        section{
+        #con{
             display: flex;
             flex-direction: row;
         }
@@ -49,7 +49,7 @@
 </head>
 <body>
     <main id="container">
-        <section>
+        <section id="con">
             <section id="left"> 
                 <header>
                     g
@@ -70,3 +70,4 @@
 </body>
 
 </html>
+
